--- a/src/components/Slide.module.css
+++ b/src/components/Slide.module.css
@@ -34,19 +34,22 @@
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: 5;
 }
 
-.hero > .actions > div {
+.hero > .actions > button {
   background-color: hsl(0, 0%, 0%);
   width: 3.5rem;
   aspect-ratio: 1;
+  /* outline: none; */
+  border: none;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
 }
 
-.hero > .actions > div > img {
+.hero > .actions > button > img {
   scale: 0.75;
 }
 
@@ -55,7 +58,7 @@
   padding: 3.6rem 2rem 4.5rem 2rem;
 }
 
-.info > h2 {
+.info h2 {
   font-size: 2.45rem;
   font-weight: 700;
   letter-spacing: -0.1rem;
@@ -63,7 +66,7 @@
   max-width: 25.3rem;
 }
 
-.info > p {
+.info p {
   color: hsl(0, 0%, 63%);
   font-size: 0.95rem;
   line-height: 1.4rem;
@@ -90,7 +93,7 @@
 }
 
 @media (hover: hover) {
-  .hero > .actions > div:hover {
+  .hero > .actions > button:hover {
     background-color: hsl(0, 0%, 27%);
   }
   .shop:hover p {
@@ -105,7 +108,7 @@
 }
 
 @media (max-width: 18.5rem) {
-  .info > h2 {
+  .info h2 {
     font-size: 2rem;
   }
   .shop {
@@ -172,7 +175,7 @@
     text-align: left;
     padding: 2.5rem 1rem;
   }
-  .info > p {
+  .info p {
     margin-bottom: 1.5rem;
   }
 }
@@ -181,7 +184,7 @@
   .hero > .actions {
     right: -7rem;
   }
-  .info > h2 {
+  .info h2 {
     font-size: 2.6rem;
   }
 }
@@ -190,13 +193,13 @@
   .hero > .actions {
     right: -10rem;
   }
-  .hero > .actions > div {
+  .hero > .actions > button {
     width: 5rem;
   }
-  .hero > .actions > div > img {
+  .hero > .actions > button > img {
     scale: 1;
   }
-  .info > h2 {
+  .info h2 {
     font-size: 3rem;
   }
 }
