used button elements for slider arrows instead of divs

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -35,7 +35,9 @@
 
 @media (min-width: 58.5rem) {
   .light,
-  .light > img {
+  .dark,
+  .light > img,
+  .dark > img {
     height: 100%;
   }
   .container {
